force-app/main/default/objects/KYC_Detail__c/KYC_Detail__c.object-meta.xml
<CustomObject>
    <label>KYC Detail</label>
    <nameField>
        <displayFormat>KYC-{00000}</displayFormat>
        <label>KYC Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>KYC Details</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>