force-app/main/default/objects/KYC_Detail__c/fields/Anonymized__c.field-meta.xml
<CustomField>
    <fullName>Anonymized__c</fullName>
    <formula>Account__r.Deletion_Request__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Anonymized</label>
    <type>Checkbox</type>
</CustomField>