force-app/main/default/objects/KYC_Detail__c/fields/Appendix__c.field-meta.xml
<CustomField>
    <fullName>Appendix__c</fullName>
    <label>Appendix</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>12a</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>