force-app/main/default/objects/KYC_Detail__c/fields/Authority__c.field-meta.xml
<CustomField>
    <fullName>Authority__c</fullName>
    <label>Authority</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Verwaltungsreferat</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>