force-app/main/default/objects/KYC_Detail__c/fields/Check_DateTime__c.field-meta.xml
<CustomField>
    <fullName>Check_DateTime__c</fullName>
    <label>Check DateTime</label>
    <type>DateTime</type>
</CustomField>