force-app/main/default/objects/KYC_Detail__c/fields/City__c.field-meta.xml
<CustomField>
    <fullName>City__c</fullName>
    <label>City</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>BERLIN</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>