force-app/main/default/objects/KYC_Detail__c/fields/Country_Of_Document__c.field-meta.xml
<CustomField>
    <fullName>Country_Of_Document__c</fullName>
    <label>Country Of Document</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>DEU</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>