force-app/main/default/objects/KYC_Detail__c/fields/Date_Of_Expiry__c.field-meta.xml
<CustomField>
    <fullName>Date_Of_Expiry__c</fullName>
    <label>Date Of Expiry</label>
    <type>Date</type>
</CustomField>