force-app/main/default/objects/KYC_Detail__c/fields/Document_Type__c.field-meta.xml
<CustomField>
    <fullName>Document_Type__c</fullName>
    <label>Document Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>PASSPORT</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>