force-app/main/default/objects/KYC_Detail__c/fields/Failure_Reason__c.field-meta.xml
<CustomField>
    <fullName>Failure_Reason__c</fullName>
    <label>Failure Reason</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>TECH_LIGHTING</fullName>
                <label>Tech Lighting</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>