force-app/main/default/objects/KYC_Detail__c/fields/Identification_Id__c.field-meta.xml
<CustomField>
    <fullName>Identification_Id__c</fullName>
    <label>Identification Id</label>
    <length>80</length>
    <type>Text</type>
</CustomField>