force-app/main/default/objects/KYC_Detail__c/fields/Identification_Method__c.field-meta.xml
<CustomField>
    <fullName>Identification_Method__c</fullName>
    <label>Identification Method</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>