force-app/main/default/objects/KYC_Detail__c/fields/Method__c.field-meta.xml
<CustomField>
    <fullName>Method__c</fullName>
    <label>Method</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>idnow</fullName>
                <label>IDnow</label>
            </value>
            <value>
                <fullName>postident</fullName>
                <label>POSTIDENT</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>