force-app/main/default/objects/KYC_Detail__c/fields/Place_Of_Issue__c.field-meta.xml
<CustomField>
    <fullName>Place_Of_Issue__c</fullName>
    <label>Place Of Issue</label>
    <length>255</length>
    <type>Text</type>
</CustomField>