force-app/main/default/objects/KYC_Detail__c/fields/Solarisbank_Id__c.field-meta.xml
<CustomField>
    <fullName>Solarisbank_Id__c</fullName>
    <externalId>true</externalId>
    <label>Solarisbank Id</label>
    <length>80</length>
    <type>Text</type>
</CustomField>