force-app/main/default/objects/KYC_Detail__c/fields/State__c.field-meta.xml
<CustomField>
    <fullName>State__c</fullName>
    <label>State</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>pending</fullName>
                <label>Pending</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>