force-app/main/default/objects/KYC_Detail__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>successful</fullName>
                <label>Successful</label>
            </value>
            <value>
                <fullName>pending</fullName>
                <label>Pending</label>
            </value>
            <value>
                <fullName>expired</fullName>
                <label>Expired</label>
            </value>
            <value>
                <fullName>started</fullName>
            </value>
            <value>
                <fullName>rejected</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>