force-app/main/default/objects/KYC_Detail__c/fields/Title__c.field-meta.xml
<CustomField>
    <fullName>Title__c</fullName>
    <label>Title</label>
    <length>20</length>
    <type>Text</type>
</CustomField>