force-app/main/default/objects/KYC_Detail__c/fields/USA_Tax_Verification__c.field-meta.xml
<CustomField>
    <fullName>USA_Tax_Verification__c</fullName>
    <defaultValue>false</defaultValue>
    <label>USA Tax Verification</label>
    <type>Checkbox</type>
</CustomField>