force-app/main/default/objects/KYC_Detail__c/fields/User_Appendix__c.field-meta.xml
<CustomField>
    <fullName>User_Appendix__c</fullName>
    <label>User Appendix</label>
    <length>255</length>
    <type>Text</type>
</CustomField>