force-app/main/default/objects/KYC_Detail__c/fields/User_City__c.field-meta.xml
<CustomField>
    <fullName>User_City__c</fullName>
    <label>User City</label>
    <length>255</length>
    <type>Text</type>
</CustomField>