force-app/main/default/objects/KYC_Detail__c/fields/User_Country__c.field-meta.xml
<CustomField>
    <fullName>User_Country__c</fullName>
    <label>User Country</label>
    <length>255</length>
    <type>Text</type>
</CustomField>