force-app/main/default/objects/KYC_Detail__c/fields/User_Last_Name__c.field-meta.xml
<CustomField>
    <fullName>User_Last_Name__c</fullName>
    <label>User Last Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>