force-app/main/default/objects/KYC_Detail__c/fields/User_Mobile_Phone__c.field-meta.xml
<CustomField>
    <fullName>User_Mobile_Phone__c</fullName>
    <label>User Mobile Phone</label>
    <type>Phone</type>
</CustomField>