force-app/main/default/objects/KYC_Detail__c/fields/User_Salutation__c.field-meta.xml
<CustomField>
    <fullName>User_Salutation__c</fullName>
    <label>User Salutation</label>
    <length>255</length>
    <type>Text</type>
</CustomField>