force-app/main/default/objects/KYC_Detail__c/fields/User_Street__c.field-meta.xml
<CustomField>
    <fullName>User_Street__c</fullName>
    <label>User Street</label>
    <length>255</length>
    <type>Text</type>
</CustomField>