force-app/main/default/objects/KYC_Detail__c/fields/User_Title__c.field-meta.xml
<CustomField>
    <fullName>User_Title__c</fullName>
    <label>User Title</label>
    <length>255</length>
    <type>Text</type>
</CustomField>