force-app/main/default/objects/KYC_Detail__c/recordTypes/eSigning.recordType-meta.xml
<RecordType>
    <fullName>eSigning</fullName>
    <active>false</active>
    <label>eSigning</label>
</RecordType>