force-app/main/default/objects/KYC_Detail__c/recordTypes/Standard_Identification.recordType-meta.xml
<RecordType>
    <fullName>Standard_Identification</fullName>
    <active>true</active>
    <label>Standard Identification</label>
</RecordType>